CSS fix to make tooltip work on Firefox
display: block instead of inline for hover text

--- a/sass/overhaul.sass
+++ b/sass/overhaul.sass
@@ -238,7 +238,7 @@ $sl-ht-width: calc(100% - (#{$sl-ht-lr-padding} * 2))
     font-size: 0.75rem
     text-align: left
     position: absolute
-    display: inline
+    display: block
     width: $sl-ht-width
     padding-left: $sl-ht-lr-padding
     padding-right: $sl-ht-lr-padding
